--- a/Selkie.WPF.Views/ControlView.xaml
+++ b/Selkie.WPF.Views/ControlView.xaml
@@ -36,7 +36,7 @@
             </StackPanel>
         </Grid>
         <DockPanel LastChildFill="True">
-            <Button DockPanel.Dock="Right"
+            <Button DockPanel.Dock="Bottom"
                     Content="Apply"
                     Command="{Binding ApplyCommand}"
                     IsEnabled="{Binding IsApplyEnabled}" />
