--- a/Selkie.WPF.Views/ControlView.xaml
+++ b/Selkie.WPF.Views/ControlView.xaml
@@ -40,6 +40,8 @@
                     Content="Apply"
                     Command="{Binding ApplyCommand}"
                     IsEnabled="{Binding IsApplyEnabled}" />
+            <Label DockPanel.Dock="Left"
+                   Content="Available Test Lines" />
             <ComboBox DockPanel.Dock="Right"
                       ItemsSource="{Binding TestLines}"
                       SelectedItem="{Binding SelectedTestLine}" />
