--- a/Selkie.WPF.Views/RacetrackSettingsView.xaml
+++ b/Selkie.WPF.Views/RacetrackSettingsView.xaml
@@ -6,9 +6,11 @@
                 xmlns:views="clr-namespace:Selkie.WPF.Views"
                 xmlns:userControls="clr-namespace:Selkie.WPF.UserControls;assembly=Selkie.WPF.UserControls"
                 mc:Ignorable="d"
-                d:DesignHeight="300" d:DesignWidth="300">
+                d:DesignHeight="300" Width="440.8">
     <DockPanel LastChildFill="True">
-        <userControls:DisplaySettings DockPanel.Dock="Top" DataContext="{Binding}" />
+        <userControls:DisplaySettings DockPanel.Dock="Top"
+                                      DataContext="{Binding}"
+                                      HorizontalAlignment="Stretch" />
         <Button DockPanel.Dock="Top"
                 Content="Apply"
                 Command="{Binding ApplyCommand}"
