Update from private repository - Selkie services are now Windows services - Added MSI setups for windows services - Added support for separate turn radius for port and starboard

--- a/Selkie.WPF.Views/PheromonesView.xaml
+++ b/Selkie.WPF.Views/PheromonesView.xaml
@@ -7,50 +7,58 @@
                 xmlns:userControls="clr-namespace:Selkie.WPF.UserControls;assembly=Selkie.WPF.UserControls"
                 mc:Ignorable="d"
                 d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <StackPanel Grid.Row="0"
+    <DockPanel LastChildFill="True">
+        <StackPanel DockPanel.Dock="Top">
+            <CheckBox Margin="5,6,5,0"
+                      Content="Show Pheromones" 
+                      IsChecked="{Binding Path=IsShowPheromones}" />
+            <Separator Height="10"/>
+        </StackPanel>
+        <Grid DockPanel.Dock="Bottom">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Row="0"
                     Grid.Column="0"
                     Orientation="Vertical">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0"
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0"
                            Grid.Column="0"
                            Text="Minimum:" />
-                <TextBox Grid.Row="0"
+                    <TextBox Grid.Row="0"
                          Grid.Column="1"
                          IsReadOnly="True"
                          Text="{Binding Minimum, Mode=OneWay}" />
-                <TextBlock Grid.Row="1"
+                    <TextBlock Grid.Row="1"
                            Grid.Column="0"
                            Text="Maximum:" />
-                <TextBox Grid.Row="1"
+                    <TextBox Grid.Row="1"
                          Grid.Column="1"
                          IsReadOnly="True"
                          Text="{Binding Maximum, Mode=OneWay}" />
-                <TextBlock Grid.Row="2"
+                    <TextBlock Grid.Row="2"
                            Grid.Column="0"
                            Text="Average:" />
-                <TextBox Grid.Row="2"
+                    <TextBox Grid.Row="2"
                          Grid.Column="1"
                          IsReadOnly="True"
                          Text="{Binding Average, Mode=OneWay}" />
-            </Grid>
-        </StackPanel>
-        <userControls:DisplayPheromones Grid.Row="0"
+                </Grid>
+            </StackPanel>
+            <userControls:DisplayPheromones Grid.Row="0"
                                         Grid.Column="2" />
-    </Grid>
+        </Grid>
+    </DockPanel>
 </views:BaseView>
